--- a/app/views/subs/new.html.erb
+++ b/app/views/subs/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-sm-4">
-    <%= form_with url: subscription_path, local: true, id: "payment_form" do |form| %>
+    <%= form_with url: sub_path, local: true, id: "payment-form" do |form| %>
       <div class="form-group">
         <label for="card-element">Credit or debit card</label>
         <div id="card-element" class="form-control">
