--- a/app/views/subs/show.html.erb
+++ b/app/views/subs/show.html.erb
@@ -2,13 +2,13 @@
 
 <% if @sub && @sub.on_trial? %>
   <p>You are trialing the <strong><%= @sub.stripe_plan %></strong> plan. </p>
-  <p><%= link_to "Chane plan", edit_sub_path %>
+  <p><%= link_to "Change plan", edit_sub_path %>
 <% elsif @sub && @sub.on_grace_period? %>
   <p>Your subscription has been canceled and you have access until <%= sub.ends_at.to_date.to_s(:long )%></p>
   <p><%= link_to "Resume subscription", resume_sub_path, method: :patch %></p>
 <% elsif @sub && @sub.active? %>
   <p>You are subscribed to the <strong><%= @sub.stripe_plan %></strong> plan.<p>
-  <p><%= link_to "Chane plan", edit_sub_path %>
+  <p><%= link_to "Change plan", edit_sub_path %>
 
 <% else %>
   <p>You are not subscribed. <%= link_to "Subscribe", pricing_path %></p>
