--- a/app/views/subs/edit.html.erb
+++ b/app/views/subs/edit.html.erb
@@ -6,7 +6,7 @@
       <h5><%= plan.name %></h5>
       <h2><%= formatted_amount plan.amount %></h2>
       <div class="mb-3"><small class="text-muted">per <%= plan.interval %></small></div>
-      <% if plan.stripe_id == @sub.stripe_plan %>
+      <% if plan.stripe_price_id == @sub.stripe_plan %>
         <%= link_to "Current Plan", "#" %>
       <% else %>
         <%= link_to "Switch Plan", sub_path(plan_id: plan.id), method: :patch, class: "btn btn-primary", data: { confirm: "Are you sure you want to change your plan?" } %>
